--- a/style.css
+++ b/style.css
@@ -1685,17 +1685,20 @@ textarea {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 20px;
+  padding: 12px 16px 32px 20px;
 }
 
 .reserve-btn {
-  background: #a7d993;
-  color: #000000;
   padding: 10px 20px;
   border: none;
   border-radius: 25px;
   cursor: pointer;
   font-size: 16px;
+  margin: 0;
+}
+
+.sticky-reserve{
+    display: none;
 }
 
 
@@ -1720,6 +1723,31 @@ textarea {
         font-size: 14px;
     }
 
+    .sticky-reserve{
+        display: flex;
+    }
+
+    .sticky-reserve h3{ 
+        font-family: "Black";
+        font-size: 19px;
+        letter-spacing: 2%;
+        line-height: 1.1;
+    }
+
+    .sticky-reserve p{ 
+        font-family: "Medium";
+        font-size: 12px;
+        letter-spacing: 0%;
+        line-height: 1.3;
+    }
+
+    .sticky-text{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+
     .hero-left h4{
         margin-bottom: 20px;
     }
@@ -1740,6 +1768,10 @@ textarea {
         left: 50%;
         transform: translateX(-50%);
         z-index: 1000;
+    }
+
+    .button-container button{
+        box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.06);
     }
 
     .z-index{
@@ -1763,6 +1795,10 @@ textarea {
 
     .button-container button:nth-child(1){
         width: 178px;
+    }
+
+    .info-left{
+        width: 100%;
     }
 
     .button-container button:nth-child(2){
