--- a/style.css
+++ b/style.css
@@ -1669,7 +1669,7 @@ textarea {
   bottom: -100px; /* Off the screen initially */
   left: 0;
   width: 100%;
-  background: #ffffff;
+  background: #F5F5F5;
   box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
   transition: bottom 0.5s ease-in-out; /* Smooth slide-up animation */
