--- a/style.css
+++ b/style.css
@@ -1683,6 +1683,7 @@ textarea {
 /* Content styling */
 .sticky-reserve .content {
   display: flex;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
   padding: 12px 16px 12px 20px;
@@ -1695,6 +1696,9 @@ textarea {
   cursor: pointer;
   font-size: 16px;
   margin: 0;
+  width: 146px;
+  height: 60px;
+  border-radius: 99px;
 }
 
 .sticky-reserve{
@@ -1739,6 +1743,8 @@ textarea {
         font-size: 12px;
         letter-spacing: 0%;
         line-height: 1.3;
+        color: #4A4C49;
+        margin-top: 4px;
     }
 
     .sticky-text{
