--- a/style.css
+++ b/style.css
@@ -129,9 +129,14 @@ input{
 /* menu */
 
 .header .menu {
+    width: 100vw;
   clear: both;
   max-height: 0;
   transition: max-height .2s ease-out;
+}
+
+.menu{
+    background-color: #f5f5f5;
 }
 
 /* menu icon */
@@ -185,7 +190,7 @@ input{
 }
 
 .header .menu-btn:checked ~ .menu {
-  max-height: 240px;
+  max-height: 100vh;
 }
 
 .header .menu-btn:checked ~ .menu-icon .navicon {
@@ -1687,6 +1692,15 @@ textarea {
   justify-content: space-between;
   align-items: center;
   padding: 10px 16px 10px 20px;
+}
+
+.menu a{
+    background-color: #F5F5F5;
+    border-radius: 0;
+    font-family: "Black";
+    font-size: 28px;
+    line-height: 1.1;
+    letter-spacing: 2%;
 }
 
 .reserve-btn {
