--- a/style.css
+++ b/style.css
@@ -1832,7 +1832,7 @@ textarea {
         background-color: transparent !important;
         border-radius: 0px;
         margin-top: 0;
-        padding: 9px 12px 9px 18px;
+        /* padding: 9px 12px 9px 18px; */
         box-shadow: none;
     }
 
