--- a/style.css
+++ b/style.css
@@ -1695,7 +1695,6 @@ textarea {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  align-items: center;
   padding: 10px 16px 10px 20px;
 }
 
@@ -1715,8 +1714,8 @@ textarea {
   cursor: pointer;
   font-size: 16px;
   margin: 0;
-  width: 164px;
-  height: 60px;
+  width: 160px;
+  height: 48px;
   border-radius: 99px;
 }
 
@@ -1784,6 +1783,10 @@ textarea {
 
     .hero-left h2{
         margin-top: 12px;
+    }
+
+    .body-container{
+        margin-top: 0px;
     }
 
     .button-container{
