--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ input{
 }
 @font-face {                                                                                                                                                                                                                                                                              
     font-family:'Medium';                                                                                                                                                                                                                                                                
-    src: url(America/GT-America-Medium.woff2) format("woff2"); ,
+    src: url(America/GT-America-Medium.woff2) format("woff2");
     font-display: swap;                                                                                                                                                                                                                                                                                                                                                                                                                                     
 }
 @font-face {                                                                                                                                                                                                                                                                              
@@ -94,9 +94,19 @@ input{
 .header {
   background-color: #fff;
   position: fixed;
-  width: 100%;
+  width: 86vw;
   z-index: 1000;
+  border-radius: 999px;
+  margin-top: 10px;
+  overflow: hidden;
+  height: 72px;
 }
+
+header svg{
+    margin-top: 10px;
+    margin-left: 24px;
+}
+
 
 .header ul {
   margin: 0;
@@ -109,7 +119,6 @@ input{
 .header li a {
   display: block;
   padding: 20px 20px;
-  border-right: 1px solid #f4f4f4;
   text-decoration: none;
   margin: 0;
 }
@@ -130,14 +139,15 @@ input{
 /* menu */
 
 .header .menu {
-    width: 100vw;
+    width: auto;
   clear: both;
   max-height: 0;
   transition: max-height .2s ease-out;
+  margin-top: 4px;
 }
 
 .menu{
-    background-color: #f5f5f5;
+    background-color: #f5f5f5;;
 }
 
 /* menu icon */
@@ -300,6 +310,11 @@ p{
     position: relative;
 }
 
+.gallery-row{
+    display: flex;
+    justify-content: space-between;
+}
+
 .gallery a {
     color: inherit; /* Use parent's color */
     text-decoration: none; /* Removes underline, if applied */
@@ -346,6 +361,10 @@ p{
     overflow: hidden;
 }
 
+.gallery-3{
+    display: none;
+}
+
 .gallery img:hover{
     transform: scale(1.1);
 }
@@ -383,7 +402,7 @@ p{
 .gallery button{
     color: #1D1F1C;
     position: absolute;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(24px);
     -webkit-backdrop-filter: blur(24px);
     overflow: hidden;
@@ -1699,12 +1718,11 @@ textarea {
 }
 
 .menu a{
-    background-color: #F5F5F5;
-    border-radius: 0;
-    font-family: "Black";
-    font-size: 28px;
-    line-height: 1.1;
-    letter-spacing: 2%;
+    background-color: #fff;
+    font-family: "Bold";
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 1%;
 }
 
 .reserve-btn {
@@ -1745,6 +1763,30 @@ textarea {
         font-size: 14px;
     }
 
+    .header{
+        width: 100%;
+        border-radius: 0px;
+        margin: 0px;
+        overflow: visible;
+        height: 67px;
+    }
+
+    .header .menu {
+        width: 100vw;
+      clear: both;
+      max-height: 0;
+      transition: max-height .2s ease-out;
+    }
+
+    .menu a{
+        background-color: #F5F5F5;
+        border-radius: 0;
+        font-family: "Black";
+        font-size: 28px;
+        line-height: 1.1;
+        letter-spacing: 2%;
+    }
+
     .sticky-reserve{
         display: flex;
     }
@@ -1770,6 +1812,14 @@ textarea {
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
+    }
+
+    .body-container{
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        width: 95vw;
+        margin-top: 56px;
     }
 
     .hero-left h4{
@@ -1915,6 +1965,69 @@ textarea {
     .video-insert{
         width: 100%;
         height: 43vh;
+    }
+
+    .gallery-2-bottom{
+        display: none;
+    }
+
+    .gallery-2-top, .gallery-1{
+        height: 264px;
+    }
+
+    .gallery-2-top a, .gallery-1 a{
+        height: 128px;
+    }
+
+    .gallery img{
+        height: 128px;
+    }
+
+    .gallery-3{
+        display: flex;
+        width: 100%;
+        height: 188px;
+        margin-top: 8px;
+        overflow: hidden;
+    }
+
+    .gallery{
+        height: auto;
+        flex-direction: column;
+        margin-top: 32px;
+    }
+
+    .gallery-row{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .gallery button{
+        margin-right: 16px;
+        font-size: 15px;
+        padding: 12px 16px 12px 16px;        
+        background-color: rgba(255, 255, 255, 0.8);
+    }
+
+    .section-1 h2{
+        text-align: left;
+        margin-left: 8px;
+    }
+
+    .section-1 p{
+        margin-left: 8px;
+        font-size: 16px;
+        line-height: 1.3;
+        letter-spacing: 2.5;
+        margin-top: 15px;
+    }
+
+    .info-left{
+        margin-top: 32px;
+    }
+
+
 }
 
 
