--- a/style.css
+++ b/style.css
@@ -284,6 +284,14 @@ p{
     color: #ffffff;
 }
 
+span{
+    font-family: "Black";
+    font-size: 14px;
+    line-height: 1.4;
+    color: #519031;
+}
+
+
 .hero-left h4{
     margin-bottom: 40px;
 }
@@ -298,6 +306,54 @@ p{
 
 .section-1 p{
     margin-top: 30px;
+}
+
+.section-2 h2{
+    margin-top: 52px;
+    font-size: 30px;
+    line-height: 1.2;
+    width: 450px;
+    margin-bottom: 20px;
+}
+
+.fly-fishing-section {
+  padding: 20px;
+  text-align: center;
+}
+
+.fish-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  overflow: hidden;
+}
+
+.fish-card {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 16px;
+  text-align: left;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.fish-card img {
+  max-width: 100%;
+  border-radius: 8px 8px 0 0;
+}
+
+@media (max-width: 768px) {
+  .fish-grid {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+  }
+
+  .fish-card {
+    flex: 0 0 auto;
+    width: 80%; /* Adjust the width for the carousel */
+    scroll-snap-align: center;
+  }
 }
 
 .gallery{
