--- a/style.css
+++ b/style.css
@@ -321,25 +321,53 @@ span{
   text-align: center;
 }
 
+
+
 .fish-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 20px;
+  gap: 12px;
   overflow: hidden;
+  margin-top: 40px;
+}
+
+.fish-grid-content{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding-left: 28px;
+
+}
+
+.fish-grid-content h3{
+    font-family: "Bold";
+    font-size: 16px;
+    line-height: 1.2;
+    letter-spacing: 2%;
+}
+
+.fish-grid-content li{
+    margin-top: 6px;
+    font-family: "Medium";
+    font-size: 12px;
+    letter-spacing: 2%;
+    color: #4A4C49;
 }
 
 .fish-card {
+    display: flex;
+    flex-direction: row;
   background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 16px;
+  border-radius: 16px;
   text-align: left;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
 
 .fish-card img {
-  max-width: 100%;
-  border-radius: 8px 8px 0 0;
+    width: 30%;
 }
 
 @media (max-width: 768px) {
@@ -2004,10 +2032,12 @@ textarea {
         width: 100%;
     }
 
-    .hero-left h1, h2, h3, h4{
-        text-align: center;
+    .hero-left h1, 
+    .hero-left h2, 
+    .hero-left h3, 
+    .hero-left h4 {
+      text-align: center;
     }
-
     .sticky-cta{
         display: none;
     }
