--- a/style.css
+++ b/style.css
@@ -338,7 +338,7 @@ span{
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    padding-left: 28px;
+    padding-left: 24px;
 
 }
 
@@ -368,6 +368,8 @@ span{
 
 .fish-card img {
     width: 30%;
+    height: 108px;
+    object-fit: cover;
 }
 
 @media (max-width: 768px) {
