--- a/style.css
+++ b/style.css
@@ -310,6 +310,7 @@ span{
 
 .section-2 h2{
     margin-top: 52px;
+    margin-left: 20px;
     font-size: 30px;
     line-height: 1.2;
     width: 450px;
@@ -325,6 +326,7 @@ span{
 
 .fish-grid {
   display: grid;
+  padding-left: 2.5vw;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 12px;
   overflow: hidden;
@@ -374,6 +376,7 @@ span{
 
 @media (max-width: 768px) {
   .fish-grid {
+    width: 100vw;
     display: flex;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
@@ -1904,7 +1907,7 @@ textarea {
         display: flex;
         align-items: flex-start;
         justify-content: space-between;
-        width: 95vw;
+        width: 100vw;
         margin-top: 56px;
     }
 
@@ -2083,6 +2086,8 @@ textarea {
         height: auto;
         flex-direction: column;
         margin-top: 32px;
+        margin-left: 2.5vw;
+        margin-right: 2.5vw;
     }
 
     .gallery-row{
@@ -2100,11 +2105,11 @@ textarea {
 
     .section-1 h2{
         text-align: left;
-        margin-left: 8px;
+        margin-left: 20px;
     }
 
     .section-1 p{
-        margin-left: 8px;
+        margin-left: 20px;
         font-size: 16px;
         line-height: 1.3;
         letter-spacing: 2.5;
@@ -2141,7 +2146,12 @@ textarea {
     }
 
     .section-2 span{
-        width: 300px
+        width: 300px;
+        margin-left: 20px;
+    }
+
+    .section-2{
+        width: 100vw;
     }
 
 
