--- a/style.css
+++ b/style.css
@@ -108,6 +108,8 @@ header svg{
 }
 
 
+
+
 .header ul {
   margin: 0;
   padding: 0;
@@ -310,7 +312,6 @@ span{
 
 .section-2 h2{
     margin-top: 52px;
-    margin-left: 20px;
     font-size: 30px;
     line-height: 1.2;
     width: 450px;
@@ -326,7 +327,6 @@ span{
 
 .fish-grid {
   display: grid;
-  padding-left: 2.5vw;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 12px;
   overflow: hidden;
@@ -372,21 +372,6 @@ span{
     width: 30%;
     height: 108px;
     object-fit: cover;
-}
-
-@media (max-width: 768px) {
-  .fish-grid {
-    width: 100vw;
-    display: flex;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-  }
-
-  .fish-card {
-    flex: 0 0 auto;
-    width: 80%; /* Adjust the width for the carousel */
-    scroll-snap-align: center;
-  }
 }
 
 .gallery{
@@ -827,6 +812,18 @@ body.modal-open {
     display: flex;
     flex-direction: column;
     overflow: hidden;
+}
+
+
+.sticky-second-button{
+    margin-top: 8px !important;
+    background-color: #F5F5F5;
+    color: #1D1F1C;
+}
+
+.sticky-second-button:hover{
+    background-color: #E8E8E8;
+    color: #1D1F1C;
 }
 
 
@@ -2140,9 +2137,27 @@ textarea {
         font-size: 16px;
     }
 
+    .fish-grid{
+        padding-left: 2.5vw;
+    }
+
+    .fish-grid {
+      width: 100vw;
+      display: flex;
+      overflow-x: auto;
+      scroll-snap-type: x mandatory;
+    }
+
+    .fish-card {
+      flex: 0 0 auto;
+      width: 80%; /* Adjust the width for the carousel */
+      scroll-snap-align: center;
+    }
+
     .section-2 h2{
         width: 70%;
         font-size: 24px;
+        margin-left: 20px;
     }
 
     .section-2 span{
