--- a/style.css
+++ b/style.css
@@ -103,8 +103,13 @@ input{
 }
 
 header svg{
-    margin-top: 11px;
-    margin-left: 24px;
+    transform: scale(0.85);
+    margin-top: 7px;
+    margin-left: 16px;
+}
+
+.header svg path{
+    fill: #2A2E28;
 }
 
 
@@ -327,7 +332,7 @@ span{
 
 .fish-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 12px;
   overflow: hidden;
   margin-top: 40px;
@@ -1993,7 +1998,7 @@ textarea {
     }
 
     header.scrolled path {
-        fill: #1D1F1C;
+        fill: #2A2E28 !important;
     }
 
     header.scrolled .menu-icon {
@@ -2013,8 +2018,11 @@ textarea {
         display: none;
     }
 
-    header path{
-        fill: ;
+    .header svg path:nth-child(1) {
+        fill: #fff; /* Original color of first path */
+    }
+    .header svg path:nth-child(2) {
+        fill: #B6DB91; /* Original color of second path */
     }
 
     .hero-left{
