--- a/style.css
+++ b/style.css
@@ -92,24 +92,23 @@ input{
 /* header */
 
 .header {
-  background-color: #fff;
+  background-color: #20231F;
   position: fixed;
-  width: 86vw;
+  width: 100vw;
   z-index: 1000;
-  border-radius: 999px;
-  margin-top: 11.5px;
   overflow: hidden;
-  height: 72px;
+  height: 80px;
+  padding-left: 8vw;
+  padding-right: 8vw;
 }
 
 header svg{
-    transform: scale(0.85);
-    margin-top: 7px;
-    margin-left: 16px;
+    transform: scale(0.95);
+    margin-top: 11px;
 }
 
 .header svg path{
-    fill: #2A2E28;
+
 }
 
 
@@ -120,7 +119,7 @@ header svg{
   padding: 0;
   list-style: none;
   overflow: hidden;
-  background-color: #fff;
+  background-color: transparent;
 }
 
 .header li a {
@@ -251,6 +250,7 @@ header svg{
   }
 }
 
+
 h1{
     font-family: "Black";
     font-size: 80px;
@@ -332,7 +332,7 @@ span{
 
 .fish-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
   gap: 12px;
   overflow: hidden;
   margin-top: 40px;
@@ -1779,11 +1779,12 @@ textarea {
 }
 
 .menu a{
-    background-color: #fff;
+    background-color: transparent;
     font-family: "Bold";
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 1%;
+    color: #fff;
 }
 
 .reserve-btn {
@@ -1830,6 +1831,7 @@ textarea {
         margin: 0px;
         overflow: visible;
         height: 67px;
+        padding: 0;
     }
 
     .header .menu {
@@ -1846,6 +1848,7 @@ textarea {
         font-size: 28px;
         line-height: 1.1;
         letter-spacing: 2%;
+        color: #1D1F1C;
     }
 
     .sticky-reserve{
