--- a/style.css
+++ b/style.css
@@ -607,7 +607,7 @@ body{
     background-color: #2A2E28;
 }
 
-.hero img{
+.hero-left img{
     position: absolute;
     background: url('img/hero-back.png') no-repeat center center;
     background-size: cover;
@@ -808,7 +808,6 @@ body.modal-open {
 }
 
 .video-insert{
-    z-index: 50;
   width: 41vw;
   height: 100%;
   object-fit: cover;
@@ -2012,7 +2011,8 @@ textarea {
         height: auto;
     }
 
-    .hero img{
+    .hero-left img{
+        contain: layout paint size;
         width: 100%;
     }
 
