--- a/style.css
+++ b/style.css
@@ -92,8 +92,10 @@ input{
 /* header */
 
 .header {
+    display: flex;
   background-color: transparent;
   position: fixed;
+  justify-content: space-between;
   width: 100vw;
   z-index: 1000;
   overflow: hidden;
@@ -101,6 +103,20 @@ input{
   padding-left: 8vw;
   padding-right: 8vw;
 }
+
+header.scrolled{
+    background-color: #fff !important;
+    box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.08);
+}
+
+header.scrolled path{
+    fill: #2A2E28;
+}
+
+header.scrolled li a{
+    color: #2A2E28;
+}
+
 
 header svg{
     transform: scale(0.95);
@@ -141,8 +157,8 @@ header svg{
 }
 
 .header li a{
-    padding-left: 18px !important;
-    padding-right: 18px !important;
+    padding-left: 0px !important;
+    padding-right: 22px !important;
 }
 
 .menu li{
@@ -167,6 +183,7 @@ header svg{
 
 .header .menu {
     width: auto;
+    margin-left: 5vw;
   clear: both;
   max-height: 0;
   transition: max-height .2s ease-out;
@@ -258,7 +275,7 @@ header svg{
     float: left;
   }
   .header li a {
-    padding: 20px 30px;
+    padding: 20px 24px;
   }
   .header .menu {
     clear: none;
@@ -1824,6 +1841,13 @@ textarea {
     display: none;
 }
 
+.desktop-show{
+    display: flex !important;
+    padding-top: 16px;
+    height: 48px;
+    margin-right: 0px;
+    margin-top: 16px;
+}
 
 
 
@@ -1847,6 +1871,7 @@ textarea {
     }
 
     .header{
+        display: inline-block;
         width: 100%;
         border-radius: 0px;
         margin: 0px;
@@ -1856,6 +1881,7 @@ textarea {
     }
 
     .header .menu {
+        margin-left: 0px;
         width: 100vw;
       clear: both;
       max-height: 0;
@@ -1866,6 +1892,10 @@ textarea {
         display: flex;
     }
 
+    .desktop-show{
+        display: none !important;
+    }
+
     .menu a{
         background-color: #F5F5F5;
         border-radius: 0;
@@ -1874,6 +1904,7 @@ textarea {
         line-height: 1.1;
         letter-spacing: 2%;
         color: #1D1F1C;
+        margin-left: 16px;
     }
 
     .sticky-reserve{
@@ -2026,6 +2057,14 @@ textarea {
     .menu li{
         margin: 0px;
         background-color: #F5F5F5;
+    }
+
+    .menu li:nth-last-child(1){
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-top: 12px;
+        padding-bottom: 12px;
     }
 
     .header li a{
