--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ header svg{
 }
 
 .menu li{
-    margin-top: 6px;
+    margin-top: 8px;
 }
 
 .menu button{
@@ -269,6 +269,16 @@ header svg{
 }
 
 /* 48em = 768px */
+
+
+@media only screen and (max-width: 1200px){
+
+    .header{
+        padding-left: 2vw;
+        padding-right: 2vw;
+    }
+
+}
 
 @media only screen and (min-width: 880px){
   .header li {
@@ -1820,7 +1830,7 @@ textarea {
     font-family: "Bold";
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 1%;
+    letter-spacing: 3%;
     color: #fff;
     justify-content: flex-start;
 }
