--- a/style.css
+++ b/style.css
@@ -377,6 +377,43 @@ span{
     padding-top: 68px;
 }
 
+.section-4{
+    margin-top: 80px;
+}
+
+.section-4-left{
+    width: 50%;
+}
+
+.section-4-right{
+    width: 50%;
+    justify-content: flex-end;
+    gap: 8px;
+}
+
+.section-4-bottom{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: 8px;
+}
+
+.section-4 img{
+    width: 60%;
+}
+
+.section-4 h2{
+    font-size: 44px;
+    line-height: 1.1;
+    letter-spacing: 2%;
+}
+
+.section-4 h3{
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 2%;
+}
+
 .lodge-included ul{
     border-radius: 16px;
     font-family: "Medium";
@@ -2329,11 +2366,11 @@ textarea {
 
     .section-3 .gallery{
         margin-bottom: 32px !important;
-        margin-top: 28px !important;
+        margin-top: 32px !important;
     }
 
     .section-3 h1{
-        font-size: 28px;
+        font-size: 30px;
         line-height: 1.1;
         letter-spacing: 2%;
         margin-left: 20px;
