--- a/style.css
+++ b/style.css
@@ -378,41 +378,60 @@ span{
 }
 
 .section-4{
-    margin-top: 80px;
+    margin-top: 84px;
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
 }
 
 .section-4-left{
-    width: 50%;
+    width: ;
 }
 
 .section-4-right{
-    width: 50%;
-    justify-content: flex-end;
-    gap: 8px;
-}
-
-.section-4-bottom{
-    width: 100%;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     gap: 8px;
+    justify-content: space-between;
+    width: 30%;
+    border-radius: 16px;
+    overflow: hidden;
 }
 
 .section-4 img{
-    width: 60%;
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
+}
+
+.section-4 .lodge-included{
+    width: calc(22.5vw - 8px);
 }
 
 .section-4 h2{
     font-size: 44px;
     line-height: 1.1;
     letter-spacing: 2%;
+    padding-top: 20px;
+    padding-left: 8px;
 }
 
 .section-4 h3{
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 2%;
+    padding-left: 8px;
+    padding-top: 26px;
+    padding-bottom: 54px;
 }
+
+.section-4 span{
+    position: relative;
+    font-size: 15px;
+    
+    padding-left: 8px;
+}
+
 
 .lodge-included ul{
     border-radius: 16px;
@@ -2375,6 +2394,25 @@ textarea {
         letter-spacing: 2%;
         margin-left: 20px;
         padding-top: 44px;
+    }
+
+    .section-4{
+        flex-direction: column;
+        padding-left: 2.5vw;
+        padding-right: 2.5vw;
+    }
+
+    .section-4 .lodge-included{
+        width: 100%;
+    }
+
+    .section-4-right{
+        width: 100%;
+        flex-direction: row;
+    }
+
+    .section-4 img{
+        width: 50%;
     }
 
 
