--- a/style.css
+++ b/style.css
@@ -2400,6 +2400,7 @@ textarea {
         flex-direction: column;
         padding-left: 2.5vw;
         padding-right: 2.5vw;
+        margin-top: 40px;
     }
 
     .section-4 .lodge-included{
@@ -2413,6 +2414,21 @@ textarea {
 
     .section-4 img{
         width: 50%;
+    }
+
+    .section-4 h2{
+        font-size: 30px;
+        line-height: 1.1;
+        letter-spacing: 2%;
+        padding-top: 0px;
+    }
+
+    .section-4 h3{
+        font-size: 16px;
+        line-height: 1.3;
+        letter-spacing: 2.5%;
+        padding-top: 14px;
+        padding-bottom: 36px;
     }
 
 
