--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ time, mark, audio, video {
     vertical-align: baseline;
     text-decoration: none;
     color: inherit;
+    scroll-behavior: smooth;
+
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
