--- a/style.css
+++ b/style.css
@@ -2014,6 +2014,11 @@ textarea {
         border-radius: 99px;
     }
 
+    #sec1{
+        position: relative;
+        top: -100px;
+    }
+
     .hidden {
       opacity: 0;
       visibility: hidden;
