--- a/style.css
+++ b/style.css
@@ -498,12 +498,64 @@ span{
     background-color: #464B44;
 }
 
+.section-6{
+    padding-top: 80px;    
+}
+
+.section-6 h3{
+    font-family: "Black";
+    font-size: 44px;
+    line-height: 1.1;
+    letter-spacing: 2%;
+}
+
+.faq-section {
+    padding-top: 40px;
+  text-align: center;
+}
+
+.faq-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); /* Adjust the min-width */
+    gap: 12px;
+    text-align: left;
+}
+
+.faq-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 16px;
+  padding: 18px 18px 18px 20px;
+  text-decoration: none;
+  color: #000;
+  font-size: 16px;
+  margin-right: 0px;
+  font-family: "Medium";
+  font-size: 16px;
+}
+
+.faq-item span{
+    display: flex;
+    align-items: center;
+}
+
+.faq-item:hover {
+  background-color: #f9f9f9;
+}
+.faq-lightbox-content {
+  padding: 20px;
+  font-size: 18px;
+}
+
 
 .transportation{
     display: flex;
     align-items: center;
     gap: 8px;
     margin-top: 6px;
+    margin-left: -2px;
 }
 
 .lodge-included ul{
@@ -2467,6 +2519,7 @@ textarea {
 
     .section-4 .lodge-included{
         width: 100%;
+        margin-top: 18px !important;
     }
 
     .section-4-right{
@@ -2490,7 +2543,7 @@ textarea {
         line-height: 1.3;
         letter-spacing: 2.5%;
         padding-top: 14px;
-        padding-bottom: 36px;
+        padding-bottom: 28px;
     }
 
     .section-5{
@@ -2501,9 +2554,12 @@ textarea {
         font-size: 15px;
     }
 
+
+
     .section-5-cards{
         flex-direction: column;
         padding-top: 28px;
+        gap: 6px;
     }
 
     .section-5-cards .card{
@@ -2518,6 +2574,14 @@ textarea {
     .section-5 h3{
         margin-top: 36px;
         font-size: 22px !important;
+    }
+
+    .lodge-included ul{
+        font-size: 15px;
+    }
+
+    .lodge-included li{
+        padding: 14px 0px;
     }
 
 
