--- a/style.css
+++ b/style.css
@@ -2593,7 +2593,8 @@ textarea {
 
     .section-5-cards .card{
         width: 100%;
-        padding: 20px 16px;
+        padding: 16px 16px;
+        font-size: 15px;
     }
 
     .section-5-top a{
