--- a/style.css
+++ b/style.css
@@ -343,7 +343,7 @@ span{
     font-family: "Black";
     font-size: 14px;
     line-height: 1.4;
-    color: #519031;
+    color: #45772C;
     letter-spacing: 0.4px;
 }
 
@@ -546,8 +546,29 @@ span{
   background-color: #f9f9f9;
 }
 .faq-lightbox-content {
-  padding: 20px;
   font-size: 18px;
+  width: 40vw !important;
+  background-color: #F5F5F5;
+}
+
+.faq-lightbox-content .close-container{
+    width: 40vw;
+}
+
+.faq-lightbox-content h4{
+    font-family: "Black";
+    color: #1D1F1C;
+    text-align: center;
+    font-size: 32px;
+}
+
+
+.faq-lightbox-content p{
+    font-family: "Bold";
+    color: #1D1F1C;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 32px;
 }
 
 
@@ -1039,6 +1060,10 @@ body{
     width: 100%;
 }
 
+.modal-content h3{
+
+}
+
 .close img{
     width: 20px;
     height: 20px;
@@ -1052,6 +1077,8 @@ body{
     position: fixed;
     z-index: 1000;
 }
+
+
 
 .close {
     right: 0px;
