--- a/style.css
+++ b/style.css
@@ -537,6 +537,33 @@ span{
   font-size: 16px;
 }
 
+.faq-question{
+    text-align: center;
+    margin-top: 52px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.faq-container{
+    padding: 2vw 2vw 4vw 2vw !important;
+}
+
+.faq-question h5{
+    font-size: 24px;
+    letter-spacing: 2%;
+    font-family: "Black";
+}
+
+.faq-question p{
+    font-size: 18px;
+    line-height: 1.6;
+    letter-spacing: 2%;
+    font-family: "Medium";
+    margin-top: 12px;
+    max-width: 70%;
+}
+
 .faq-item span{
     display: flex;
     align-items: center;
@@ -559,16 +586,19 @@ span{
     font-family: "Black";
     color: #1D1F1C;
     text-align: center;
-    font-size: 32px;
+    font-size: 28px;
+    margin-top: 140px;
 }
 
 
 .faq-lightbox-content p{
-    font-family: "Bold";
+    font-family: "Medium";
     color: #1D1F1C;
     text-align: center;
     font-size: 20px;
     margin-top: 32px;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 
@@ -1672,6 +1702,15 @@ textarea {
     border-radius: 10px;
     width: 55vw;
 }
+
+.form-container h4{
+    font-size: 54px;
+    font-family: "Black";
+    letter-spacing: 2%;
+    line-height: 1.1;
+    color: #1D1F1C;
+}
+
 
 .form-head{
     font-family: "Black";
