--- a/style.css
+++ b/style.css
@@ -2749,9 +2749,9 @@ textarea {
 }
 
 
-@media only screen and (max-width: 500px) and (-webkit-min-device-pixel-ratio: 0) {
-    .form-container {
-        color: black !important;
+@media only screen and (max-width: 768px) and (-webkit-min-device-pixel-ratio: 0) {
+    body {
+        background: red !important;
     }
 }
 
