--- a/style.css
+++ b/style.css
@@ -2715,6 +2715,7 @@ textarea {
         font-size: 30px;
         line-height: 1.1;
         letter-spacing: 2%;
+        padding-left: 8px;
     }
 
     .faq-item{
