--- a/style.css
+++ b/style.css
@@ -2748,9 +2748,11 @@ textarea {
 }
 
 
-@media only screen and (max-width: 768px) and (-webkit-min-device-pixel-ratio: 0) {
-    .modal-content {
-        height: 85vh;
+@supports (-webkit-touch-callout: none) and (not (-moz-appearance: none)) {
+    @media only screen and (max-width: 768px) {
+        .modal-content {
+            height: 85vh;
+        }
     }
 }
 
