--- a/style.css
+++ b/style.css
@@ -342,7 +342,7 @@ span{
     font-family: "Black";
     font-size: 14px;
     line-height: 1.4;
-    color: #45772C;
+    color: #447B28;
     letter-spacing: 0.4px;
 }
 
@@ -507,6 +507,7 @@ span{
     font-size: 44px;
     line-height: 1.1;
     letter-spacing: 2%;
+    padding-left: 8px;
 }
 
 .faq-section {
@@ -517,7 +518,7 @@ span{
 .faq-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); /* Adjust the min-width */
-    gap: 8px;
+    gap: 10px;
     text-align: left;
 }
 
@@ -2748,6 +2749,8 @@ textarea {
 }
 
 
+
+/*
 @supports (-webkit-touch-callout: none) {
     @media only screen and (max-width: 768px) {
         .safari-mobile .form-container {
